add code to load environmental variables data

--- a/2.3_PCA.Rmd
+++ b/2.3_PCA.Rmd
@@ -11,42 +11,43 @@ knitr::opts_chunk$set(echo = TRUE)
 
 https://www.davidzeleny.net/anadat-r/doku.php/en:pca_examplesv
 
-```{r}
-# https://www.rdocumentation.org/packages/vegan/versions/2.4-2/topics/decorana
-data(varespec)
-vare.dca <- decorana(varespec)
-vare.dca
-summary(vare.dca)
-plot(vare.dca)
+```{r load data}
 
-### the detrending rationale:
-gaussresp <- function(x,u) exp(-(x-u)^2/2)
-x <- seq(0,6,length=15) ## The gradient
-u <- seq(-2,8,len=23)   ## The optima
-pack <- outer(x,u,gaussresp)
-matplot(x, pack, type="l", main="Species packing")
-opar <- par(mfrow=c(2,2))
-plot(scores(prcomp(pack)), asp=1, type="b", main="PCA")
-plot(scores(decorana(pack, ira=1)), asp=1, type="b", main="CA")
-plot(scores(decorana(pack)), asp=1, type="b", main="DCA")
-plot(scores(cca(pack ~ x), dis="sites"), asp=1, type="b", main="CCA")
 
-### Let's add some noise:
-noisy <- (0.5 + runif(length(pack)))*pack
-par(mfrow=c(2,1))
-matplot(x, pack, type="l", main="Ideal model")
-matplot(x, noisy, type="l", main="Noisy model")
-par(mfrow=c(2,2))
-plot(scores(prcomp(noisy)), type="b", main="PCA", asp=1)
-plot(scores(decorana(noisy, ira=1)), type="b", main="CA", asp=1)
-plot(scores(decorana(noisy)), type="b", main="DCA", asp=1)
-plot(scores(cca(noisy ~ x), dis="sites"), asp=1, type="b", main="CCA")
-par(opar)
+extracted_load <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022/chaparraldegradation_2022/Extracted_Elevation_Slope_Aspect_Hillshade_20m.csv", header = TRUE, na.strings=c("","NA")) 
 
+extracted <- extracted_load%>% 
+  dplyr::select(!c(system.index, ID, .geo)) %>% 
+  rename(transect_ID = system_ind, 
+         aspect_degrees = aspect, 
+         elevation_m = elevation, 
+         slope_degrees = slope
+         ) %>% 
+# “southwest-ness” is calculated using: cos (aspect - 225°)
+      mutate(transect_ID = case_when(transect_ID == "1.1" ~ "1.10", # old ~ new
+                                   transect_ID == "2.1" ~ "2.10",
+                                   transect_ID == "2.2" ~ "2.20",
+                                   TRUE ~ transect_ID)) %>% 
+  
+   mutate(
+      aspect_degrees = as.numeric(aspect_degrees),
+      elevation_m = as.integer(elevation_m),
+      slope_degrees = as.numeric(slope_degrees),
+      group_15 = as.character(group_15),
+      group_9 = as.character(group_9),
+      group_6 = as.character(group_6),
+      group_4 = as.character(group_4),
+      group_2 = as.character(group_2),
+      transect_ID = as.character(transect_ID), 
+      fire_history = as.integer(fire_history), 
+      twi = as.numeric(twi)
+      )
+  
+# view(extracted)
 
 ```
 
-```{r chatgpt}
+```{r chatgpt code for CCA}
 # Load necessary library
 library(vegan)
 
