--- a/1.3_NMDS_percentcover.Rmd
+++ b/1.3_NMDS_percentcover.Rmd
@@ -86,11 +86,12 @@ _ _italics_
 
 
 # Load data
-- data prep was completed in 1_transect_continuous.Rmd, ~line 1-300
+- Cleaned transect data was completed  in 1_transect_continuous.Rmd, ~line 1-300
 - In the 2019 data, I renamed "Bromus spp." to unique Bromus species based on the surrounding Bromus species - aug 10, 2024 SML
 
-```{r load point intercept transect data from csv, include=TRUE}
-abcover_charateristics_load <- read.csv("processed/ab_specieslistwithcharateristics_08102024.csv", header = TRUE, na.strings=c("","NA")) 
+```{r load clean point intercept transect data from csv, include=TRUE}
+abcover_charateristics_load <- read.csv("processed/ab_specieslistwithcharateristics_08102024.csv", header = TRUE, na.strings=c("","NA")) %>% 
+  select(!c(X)) 
 
 # view(abcover_charateristics_load)
 # sort(unique(abcover_charateristics_load$site_rep))
@@ -98,19 +99,41 @@ abcover_charateristics_load <- read.csv("processed/ab_specieslistwithcharaterist
 length(unique(abcover_charateristics_load$site_rep))
 str(abcover_charateristics_load)
 sort(unique(abcover_charateristics_load$species))
+
+groups_load <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022/chaparraldegradation_2022/Extracted_Elevation_Slope_Aspect_Hillshade_20m.csv", header = TRUE, na.strings=c("","NA")) 
+
+groups <- groups_load %>% 
+  dplyr::select(!c(system.index, ID, aspect, elevation, hillshade, slope, site, fire_history, southwestness, twi, .geo, lat, long)) %>% 
+  rename(site_rep = system_ind) %>% 
+  mutate(site_rep = case_when(site_rep == "INT1" ~ "INT1.1", # old name ~ new name
+                              site_rep == "INT2" ~ "INT2.1",
+                              site_rep == "INT3" ~ "INT3.1",
+                              site_rep == "INT4" ~ "INT4.1",
+                              site_rep == "INT5" ~ "INT5.1",
+                                  TRUE ~ site_rep))   %>% 
+  mutate(site_rep = case_when(site_rep == "1.1" ~ "1.10", # old ~ new
+                                 site_rep == "2.1" ~ "2.10",
+                                 site_rep == "2.2" ~ "2.20",
+                                   TRUE ~ site_rep)) %>% 
+   mutate(
+      site_rep = as.character(site_rep),
+      group_15 = as.character(group_15),
+      group_typeconvert = as.character(group_typeconvert),
+      group_10 = as.character(group_10),
+      group_6 = as.character(group_6),
+      group_4 = as.character(group_4),
+      group_2 = as.character(group_2)
+      )
 ```
+
 - omit "ground" to isolate vegetation species 
 ```{r omit groundcover, include=TRUE}
 abcover_full_v_omitground <- abcover_charateristics_load %>% 
   filter(!(species %in% c("bare_ground", "moss", "rock", "litter", "thatch", "no_species"))) %>% 
-  #
-  ##
-  ###
-  ##### run the code below if you want to omit "dead" species and to combine all Bromus into "Bromus spp."
-  ##### 
-  ##### 
-  #####
-  mutate(species = case_when(species == "Acmispon glaber dead" ~ "Acmispon glaber", # old name ~ new name
+
+  mutate(species = case_when( 
+                      # replace "dead" to "alive" for perennial species
+                             species == "Acmispon glaber dead" ~ "Acmispon glaber", # old name ~ new name
                              species == "Artemisia californica dead" ~ "Artemisia californica",
                              species == "Ceanothus oliganthus dead" ~ "Ceanothus oliganthus",
                              species == "Elymus condensatus dead" ~ "Elymus condensatus",
@@ -120,14 +143,16 @@ abcover_full_v_omitground <- abcover_charateristics_load %>%
                              species == "Rhamnus ilicifolia dead" ~ "Rhamnus ilicifolia",
                              species == "Salvia leucophylla dead" ~ "Salvia leucophylla",
                              species == "Stipa lepida dead" ~ "Stipa lepida",
-                             species == "Erodium cicutarium" ~ "Erodium spp.", # combine Erodium to Erodium spp.
+                      # combine Erodium to Erodium spp.          
+                             species == "Erodium cicutarium" ~ "Erodium spp.", 
+                      # keep Bromus species separate    
                              # species == "Bromus diandrus" ~ "Bromus spp.",
                              # species == "Bromus hordeaceus" ~ "Bromus spp.",
                              # species == "Bromus rubens" ~ "Bromus spp.",
                               TRUE ~ species))
 
-#sort(unique(abcover_full_v_omitground$species))
-#glimpse(abcover_full_v_omitground)
+# sort(unique(abcover_full_v_omitground$species))
+# glimpse(abcover_full_v_omitground)
 ```
 
 # Calculate percent cover of species by transect 
@@ -140,8 +165,27 @@ abcover_byspecies <- abcover_full_v_omitground %>%
     count_per_transect = sum(n_distinct(site_rep_dist)), 
     percentcover = (count_per_transect/41)
     ) %>% 
-  dplyr::select(!c(count_per_transect)) 
-
+  dplyr::select(!c(count_per_transect)) %>% 
+  mutate(site_rep = gsub("_", ".", site_rep)) %>% 
+  mutate(site_rep = case_when(site_rep == "1.1" ~ "1.01", # old name ~ new name
+                        site_rep == "1.2" ~ "1.02",
+                        site_rep == "1.3" ~ "1.03",
+                        site_rep == "1.4" ~ "1.04",
+                        site_rep == "1.5" ~ "1.05",
+                        site_rep == "1.6" ~ "1.06",
+                        site_rep == "1.7" ~ "1.07",
+                        site_rep == "1.8" ~ "1.08",
+                        site_rep == "1.9" ~ "1.09",
+                        site_rep == "2.1" ~ "2.01",
+                         site_rep == "2.2" ~ "2.02", 
+                         site_rep == "2.3" ~ "2.03",
+                         site_rep == "2.4" ~ "2.04",
+                         site_rep == "2.5" ~ "2.05",
+                         site_rep == "2.6" ~ "2.06",
+                         site_rep == "2.7" ~ "2.07",
+                         site_rep == "2.8" ~ "2.08",
+                         site_rep == "2.9" ~ "2.09",
+   TRUE ~ site_rep))
 #glimpse(abcover_byspecies)
 
 #species list check 
@@ -152,11 +196,20 @@ abcover_byspecies <- abcover_full_v_omitground %>%
 #   pull()
 ```
 
+```{r left join percent cover and twinspan groups, include=TRUE}
+
+cover_groups <- abcover_byspecies %>% 
+  left_join(groups, by = "site_rep")
+
+# view(cover_groups)
+length(unique(cover_groups$site_rep))
+```
+
 
 # Prepare data for an NMDS
 ```{r transpose percent cover data by species, include=TRUE}
 
-abcover_byspecies_nmdsprep <- abcover_byspecies %>% 
+abcover_byspecies_nmdsprep <- abcover_byspecies_groups %>% 
   tidyr::spread(species, percentcover) %>% # transpose data so columns are species
   replace(is.na(.), 0) # replace NA with zeros
 
